[package]
name = "example_async_paralism"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
rayon = "1.10.0"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
dashmap = { version = "6.1.0", features = ["serde", "rayon"] }
csv = "1.3.1"
tokio-uring = "0.5.0"
